[package]
name = "date_utils"
version = "0.0.1"
edition = "2021"
license = "MIT"
description = "the date utils package"
repository = "https://github.com/hackers267/date_utils.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.22"