[package]
name = "date_utils"
version = "0.0.6"
edition = "2021"
license = "GPL-3.0"
description = "the date utils package"
repository = "https://github.com/hackers267/date_utils.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package.metadata.docs.rs]
all-features = true

[dependencies]
chrono = "0.4.26"
[dev-dependencies]
proptest = "1.0.0"

[features]
default = ["common"]
full = [
  "hour",
  "common",
  "year",
  "month",
  "week",
  "day",
  "minute",
  "now",
  "period",
  "millisecond",
  "second",
  "range",
  "quarter",
  "decade",
  "utils",
]
utils = []
second = []
hour = []
year = []
month = []
day = []
common = []
minute = []
now = []
period = []
week = []
millisecond = []
range = []
decade = []
quarter = []
