[package]
name = "date_utils"
version = "0.0.9"
edition = "2024"
license = "GPL-3.0"
description = "the date utils package"
repository = "https://github.com/hackers267/date_utils.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package.metadata.docs.rs]
all-features = true

[dependencies]
chrono = "0.4.38"

[features]
default = ["common"]
full = [
    "hour",
    "common",
    "year",
    "month",
    "week",
    "day",
    "minute",
    "now",
    "period",
    "millisecond",
    "second",
    "range",
    "quarter",
    "decade",
    "utils",
]
utils = []
second = []
hour = []
year = []
month = ["week", "utils", "week"]
day = []
common = []
minute = []
now = []
period = []
week = ["day", "month"]
millisecond = []
range = ["year", "week", "month", "quarter", "day", "hour", "minute", "second"]
decade = ["year", "day"]
quarter = ["month"]
